# data_mining_final_project

./: .gitignore  README.md  main.py  pyproject.toml
analysis/: README.md  clustering.py  eda.py  trajectory.py
data/: README.md  loader.py  preprocessing.py
docs/: detail-design.md  high-level-design.md  proposal.md  todo.md
eval/: README.md  metrics.py
eval/reports/: README.md
models/: README.md  baseline.py  cvae.py
models/checkpoints/: README.md
output/figures/: README.md
