[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "hdbscan>=0.8",
    "torch>=2.3",
    "geobleu @ git+https://github.com/yahoojapan/geobleu.git",
    "overpy>=0.7",
    "jpholiday>=0.1",
    "tqdm>=4.66",
]
